tests/baselines/reference/incompatibleExports1.errors.txt
incompatibleExports1.ts(4,5): error TS2309: An export assignment cannot be used in a module with other exported elements.
incompatibleExports1.ts(8,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
incompatibleExports1.ts(12,5): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
incompatibleExports1.ts(16,5): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== incompatibleExports1.ts (4 errors) ====
    declare module "foo" { 
        export interface x { a: string } 
        interface y { a: Date }
        export = y;
        ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    }
     
    declare module "baz" {
        export module a {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export var b: number;
        }
     
        module c {
        ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export var c: string;
        }
     
        export = c;
        ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    }
    